--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -76,7 +76,7 @@
           <span>OR</span>
         </div>
 
-        <a href="{% url 'google_login' %}" class="google-btn">
+        <a href="/accounts/social/google/login/?process=login" class="google-btn">
           <svg class="google-icon" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
             <path fill="#EA4335"
               d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z">
