added some margin on tags

--- a/templates/student/batch/my_sheet.html
+++ b/templates/student/batch/my_sheet.html
@@ -170,7 +170,7 @@ active
                                 <h6 class="fw-semibold mb-1 text-wrap"
                                     title="{{ question.tag_list|join:', ' }}">
                                     {% for tag in question.tag_list %}
-                                    <span class="badge bg-primary me-1">{{ tag }}</span>
+                                    <span class="badge bg-primary me-1 m-1">{{ tag }}</span>
                                     {% endfor %}
                                 </h6>
                             </td>
